# spec-kitty

./: .gitignore  .mutmut-temp-config  .mutmut-temp-config-dep-graph  .mutmut-temp-config-git-ops  .python-version  AGENTS.md  BUGS_DISCOVERED_VIA_MUTATION_TESTING.md  CAMPAIGN_FINAL_SUMMARY.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  GITHUB_ACTION_AND_MUTATION_TESTING_SUMMARY.md  ITERATION_4_COMPLETION_SUMMARY.md  ITERATION_CAMPAIGN_PROGRESS.md  MUTATION_TESTING_CAMPAIGN_COMPLETE.md  MUTATION_TESTING_FINAL_REPORT.md  MUTATION_TESTING_ITERATION_1.md  MUTATION_TESTING_ITERATION_2.md  MUTATION_TESTING_ITERATION_3.md  MUTATION_TESTING_ITERATION_4.md  MUTATION_TESTING_ITERATION_5.md  MUTMUT_SETUP_RESOLUTION.md  NEXT_ITERATION_COMMANDS.md  README.md  RELEASE_CHECKLIST.md  WP03_FINALIZATION.md  WP03_SESSION_SUMMARY.md  WP03_WP04_SESSION_SUMMARY.md  WP04_CAMPAIGN_FINAL_SUMMARY.md  WP04_COMPLETION_REPORT.md  WP04_EXECUTION_LOG.md  WP04_EXECUTIVE_SUMMARY.md  WP04_FINAL_COMPLETION_REPORT.md  WP04_IMPLEMENTATION_SUMMARY.md  WP04_SESSION_SUMMARY.md  WP04_T019-T022_REPORT.md  conftest_mutants.py  coverage.xml  mutmut_runner.py  package.json  (+8 more)
mutants/: .gitignore  None  README.md  mutmut-stats.json  pyproject.toml  pytest.ini
mutants/src/specify_cli/: __init__.py  acceptance.py  doc_generators.py  doc_state.py  frontmatter.py  gap_analysis.py  gitignore_manager.py  guards.py  legacy_detector.py  manifest.py  mission.py  plan_validation.py  task_metadata_validation.py  tasks_support.py  text_sanitization.py  verify_enhanced.py  version_utils.py  workspace_context.py
mutants/tests/: IMPLEMENTATION_COMPLETE.md  README.md  TESTING_PROGRESS.md  TESTING_REQUIREMENTS_ENCODING_AND_PLAN_VALIDATION.md  VENV_ISOLATION.md  branch_contract.py  conftest.py  manual_test_bug_117.py  test_acceptance_support.py  test_contextive_traceability.py  test_dashboard_bug_117_lifecycle.py  test_dashboard_cli_accuracy.py  test_dashboard_encoding_resilience.py  test_encoding_validation_cli.py  test_encoding_validation_functional.py  test_gitignore_management.py  test_gitignore_manager_simple.py  test_isolation_helpers.py  test_manifest_cli_filtering.py  test_package_bundling.py  test_packaging_safety.py  test_performance.py  test_plan_validation.py  test_task_helpers.py  test_tasks_cli_commands.py  test_template_compliance.py  test_upgrade_version_update.py  test_version_detection.py  test_version_fallback.py  utils.py
mutants/tests/adversarial/: __init__.py  conftest.py  test_csv_attacks.py  test_distribution.py  test_infrastructure.py  test_path_validation.py
mutants/tests/concurrency/: test_ensure_runtime_concurrent.py
mutants/tests/contract/: __init__.py  test_handoff_fixtures.py
mutants/tests/cross_branch/: test_parity.py
mutants/tests/docs/: test_architecture_docs_consistency.py  test_versioned_docs_integrity.py
mutants/tests/doctrine/: test_artifact_compliance.py  test_glossary_link_integrity.py  test_schema_validation.py  test_tactic_compliance.py
mutants/tests/e2e/: conftest.py  test_cli_smoke.py
mutants/tests/integration/: conftest.py  test_agent_command_wrappers.py  test_auto_create_target_branch.py  test_auto_merge_dependencies.py  test_bug_124_branch_routing.py  test_commands_without_constitution.sh  test_config_show_origin.py  test_conflict_resolution.py  test_constitution_comprehensive.sh  test_constitution_minimal.sh  test_constitution_runtime.py  test_dashboard_windows.ps1  test_dogfooding_safety.sh  test_dual_branch_status_routing.py  test_dual_write.py  test_e2e_mission_v1.py  test_e2e_runtime.py  test_feature_011_validation.sh  test_feature_025_workflow.py  test_feature_commands.py  test_finalize_tasks_json_output.py  test_gitignore_isolation.py  test_implement_multi_parent.py  test_init_flow.py  test_init_minimal.py  test_merge_no_remote.py  test_merge_workflow_complete.py  test_merged_dependency_workflow.py  test_migrate.py  test_migration_e2e.py  test_mission_cli.py  test_mission_guards.py  test_mission_loading.py  test_mission_software_dev.py  test_mission_switching.py  test_move_task_delegation.py  test_next_command.py  test_next_replay_parity.py  test_planning_workflow.py  test_read_cutover.py  (+13 more)
mutants/tests/release/: test_validate_release.py
mutants/tests/specify_cli/: test_agent_config_migration.py  test_central_templates.py  test_clarify_template_migration.py  test_commit_message_spec_number.py  test_constitution_template_migration.py  test_dashboard_status_parity.py  test_dependency_graph.py  test_doc_generators.py  test_doc_state.py  test_dossier_panel.py  test_exclude_worktrees_migration.py  test_feature_detection_integration.py  test_frontmatter.py  test_gap_analysis.py  test_generated_prompt_repair_migration.py  test_implement_command.py  test_implement_validation.py  test_mission_detection.py  test_research_csv_schema_migration.py  test_research_implement_template_migration.py  test_review_template_dependency_warnings.py  test_review_warnings.py  test_tasks_support.py  test_vcs_integration.py  test_workflow_agent_flag_migration.py  test_workflow_auto_moves.py  test_workflow_review_lane_gate.py  test_workspace_per_wp_migration.py
mutants/tests/sync/: conftest.py  test_auth.py  test_background.py  test_batch_error_surfacing.py  test_batch_sync.py  test_client_integration.py  test_clock.py  test_credentials.py  test_diagnose.py  test_edge_cases.py  test_envelope_id_formats.py  test_event_emission.py  test_events.py  test_forward_compatibility.py  test_git_metadata.py  test_integration.py  test_offline_queue.py  test_offline_replay.py  test_project_identity.py  test_reconnection.py  test_runtime.py  test_sync_status_check.py
mutants/tests/test_dashboard/: check_api_response.js  check_dashboard.js  check_dashboard_full.js  check_features.js  test_api_constitution.py  test_diagnostics.py  test_imports.py  test_lifecycle.py  test_scanner.py  test_server.py  test_static.py
src/doctrine/: README.md  __init__.py  artifact_kinds.py  asset.graph.yaml  directive.graph.yaml  graph.yaml  pyproject.toml  resolver.py  service.py  styleguide.graph.yaml  tactic.graph.yaml
(+5404 files in other folders)
